# gameboy

./: .gitignore  Cargo.toml
src/: main.rs
src/emulator/: cpu.rs  emulator_renderer.rs  mbc.rs  memory_map.rs  memory_strings.rs  mod.rs  ppu.rs  registers.rs
src/emulator/instructions/: arithmetic.rs  bit.rs  jump.rs  load.rs  misc.rs  mod.rs
src/emulator/ppu/: mod.rs  pixel_fetcher.rs  pixel_fifo.rs
src/emulator_renderer/: mod.rs
src/emulator_renderer/panels/: bg_map.rs  debugger.rs  io_map.rs  keyboard_map.rs  memory.rs  mod.rs  registers.rs
src/gameboy/: Cargo.toml
src/gameboy/src/: cpu.rs  lib.rs  mbc.rs  memory_map.rs  registers.rs
src/gameboy/src/instructions/: arithmetic.rs  bit.rs  jump.rs  load.rs  misc.rs  mod.rs
src/gameboy/src/ppu/: mod.rs  pixel_fetcher.rs  pixel_fifo.rs
src/gameboy/tests/: acid.rs  blargg.rs  common.rs  hacktix.rs
src/gameboy_renderer/: Cargo.toml
src/gameboy_renderer/src/: bin.rs  lib.rs
src/gameboy_renderer/src/panels/: bg_map.rs  debugger.rs  io_map.rs  keyboard_map.rs  memory.rs  mod.rs  registers.rs
src/gameboy_renderer/src/renderer/: framebuffer.rs  mod.rs
src/renderer/: framebuffer.rs  mod.rs  utils.rs
